# plantile

./: .justfile  Cargo.toml  README.md  index.html  plant.js  plant.wasm  plantile.js  plantile.wasm
.github/workflows/: deploy.yml
assets/: config.ron  palette.toml
dev-assets/: jampack.html
src/: main.rs
src/assets/: config.rs  mod.rs
src/context/: sfx.rs
src/game/: mod.rs  ui.rs
src/menu/: loading.rs
src/model/: drone.rs  grid.rs  mod.rs
src/model/logic/: actions.rs  drone.rs  mod.rs  plants.rs
src/model/tiles/: mod.rs
src/render/: mod.rs  ui.rs  util.rs
src/ui/: context.rs
src/util/: mod.rs
