[package]
name = "plant"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = "0.2.4"
async-executor = "1.13.1"
wasm-bindgen = { version = "=0.2.106", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
geng = "0.18"
geng-utils = "0.4.0"
parry2d = "0.13.5"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
serde = { version = "1.0.219", features = ["derive"] }

[patch.crates-io]
geng = { git = "https://github.com/geng-engine/geng", rev = "1e35585545463c919ff0da849af4fdad69ab02fa" }
geng-utils = { git = "https://github.com/Nertsal/geng-utils", rev = "f6e07e1db3096d710d5242c80c3781fd2d554045"}
